Fix main images alignment

--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -147,7 +147,7 @@ main img {
 }
 
 [src*=los-angeles] {
-    width: 300px;
+    width: 250px;
 }
 
 main p:nth-child(2) {
